# lazytune

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py
api/core/: config.py
api/routers/: datasets.py  models.py  optimize.py
api/schemas/: request.py  response.py
api/services/: tuning_service.py
api/utils/: file_loader.py
datasets/: data.csv
frontend/: app.js  docs.html  index.html  styles.css
lazytune/: __init__.py
lazytune.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
lazytune/evaluation/: metrics.py  validation.py
lazytune/pruning/: prune.py
lazytune/reports/: summary.py
lazytune/search/: param_grid.py  ranking.py  smart_search.py
lazytune/training/: full_training.py  screening.py
lazytune/utils/: data_split.py  timer.py
tests/: benchmark_large_dataset.py  benchmark_lr_svm.py  benchmark_randomforest_detailed.py  test.py  test_lazytune.py
