[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lazytune"
version = "0.1.0"
description = "Fast hyperparameter optimization using screening and pruning"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"

authors = [
    {name = "Anik Chand"}
]

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn"
]

[tool.setuptools.packages.find]
include = ["lazytune*"]
exclude = ["api*", "frontend*", "datasets*", "examples*", "tests*", "docs*"]

