[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lazytune"
version = "0.1.3"
description = "Fast hyperparameter optimization using screening and pruning"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"

authors = [
    {name = "Anik Chand"}
]

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn"
]

keywords = [
    "machine learning",
    "hyperparameter optimization",
    "model tuning",
    "grid search",
    "optimization"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Homepage = "https://lazytune.vercel.app"
Repository = "https://github.com/anikchand461/lazytune"

[tool.setuptools.packages.find]
include = ["lazytune*"]
exclude = ["api*", "frontend*", "datasets*", "examples*", "tests*", "docs*"]
